--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "run-sequence": "^2.0.0"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "gulp develop"
   },
   "devDependencies": {
     "gulp-data": "^1.2.1"
