Modifiec package.json and added public folder to ignore

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "run-sequence": "^2.0.0"
   },
   "scripts": {
-    "start": "gulp develop"
+    "gulp-build": "gulp build",
+    "gulp-develop": "gulp develop"
   },
   "devDependencies": {
     "gulp-data": "^1.2.1"
