--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "private": "true",
   "license": "MIT",
   "engines": {
-    "node": "8.1.x"
+    "node": "8.1.x",
+    "npm": "5.3.0"
   },
   "dependencies": {
     "body-parser": "^1.17.2",
