Made some changes to packaging.json. Additions to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-node_modules
-public
+node_modules/
+
+uploads/*
+!uploads/.gitkeep
+
+public/
 .sass-cache
 .tmp/
 dist/
@@ -7,3 +11,5 @@ dist/
 *.js.swp
 .DS_Store
 files
+npm-debug.log
+package-lock.json
