--- a/package.json
+++ b/package.json
@@ -10,24 +10,24 @@
   "private": true,
   "license": "MIT",
   "engines": {
-    "node": "8.1.x",
-    "npm": "5.3.0"
+    "node": "8.6.0",
+    "npm": "5.5.1"
   },
   "dependencies": {
-    "body-parser": "^1.17.2",
+    "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
-    "browser-sync": "^2.18.12",
+    "browser-sync": "^2.18.13",
     "del": "^3.0.0",
-    "express": "^4.15.1",
-    "express-session": "^1.15.3",
-    "govuk-elements-sass": "^3.1.1",
-    "govuk_frontend_toolkit": "^7.0.0",
+    "express": "^4.16.1",
+    "express-session": "^1.15.6",
+    "govuk-elements-sass": "3.1.1",
+    "govuk_frontend_toolkit": "7.0.0",
     "govuk_template_jinja": "0.22.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-cache": "^0.4.6",
     "gulp-changed": "^3.1.0",
-    "gulp-cli": "^1.3.0",
+    "gulp-cli": "^1.4.0",
     "gulp-htmlhint": "^0.3.1",
     "gulp-imagemin": "^3.2.0",
     "gulp-nodemon": "^2.2.1",
